--- a/404.html
+++ b/404.html
@@ -22,6 +22,6 @@ layout: default
 </style>
 
 <div class="container">
-  <p>Welcome to my home page! My name is Catherine Chen, and I am a political psychologist interested in the American public opinion on critical global issues such as science, climate change, and vaccines. I am a Ph.D. Candidate at the Department of Communication at Stanford University who is currently on the academic job market and seeking an assistant professor position set to commence in the fall of 2024.</p>
+  <p>Welcome to my home page! My name is Catherine Chen, and I am a political psychologist interested in the American public opinion on science and technology.</p>
 
 </div>
